force-app/main/default/objects/Ponderacion_Ritmo_Ventas__c/Ponderacion_Ritmo_Ventas__c.object-meta.xml
<CustomObject>
    <label>Ponderación Ritmo de Ventas</label>
    <nameField>
        <label>Ponderación Ritmo de Ventas Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ponderaciones Ritmo de Ventas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>