force-app/main/default/objects/Ponderacion_Ritmo_Ventas__c/fields/Fecha_Fin_Ponderacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Fin_Ponderacion__c</fullName>
    <label>Fecha Fin Ponderación</label>
    <type>Date</type>
</CustomField>