force-app/main/default/objects/Ponderacion_Ritmo_Ventas__c/fields/Promocion__c.field-meta.xml
<CustomField>
    <fullName>Promocion__c</fullName>
    <label>Promoción</label>
    <referenceTo>Promocion__c</referenceTo>
    <relationshipLabel>Ponderaciones Ritmo de Ventas</relationshipLabel>
    <relationshipName>Ponderaciones_Ritmo_de_Ventas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>